<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_menu_camera" android:id="@+id/nav_home" android:title="@string/menu_home"/>
        <item android:icon="@drawable/ic_baseline_task_24" android:id="@+id/nav_spin" android:title="Captcha"/>
        <item android:icon="@drawable/ic_baseline_account_balance_wallet_24" android:id="@+id/nav_wallet" android:title="@string/menu_wallet"/>
        <item android:icon="@drawable/ic_baseline_share_24" android:id="@+id/nav_invite" android:title="@string/menu_invite"/>
        <item android:icon="@drawable/ic_baseline_task_alt_24" android:id="@+id/nav_telegram" android:title="@string/menu_telegram"/>
        <item android:icon="@drawable/ic_baseline_exit_to_app_24" android:id="@+id/nav_logout" android:title="@string/menu_logout"/>
    </group>
</menu>
